# financial-transactions

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  components.d.ts  docker-compose.yml  index.html  nginx.conf.template  package.json  pyproject.toml  tsconfig.app.json  uno.config.ts  vite.config.ts
src/client/: anu.config.ts  index.html  main.ts  server.ts
src/client/components/: QrScanner.vue
src/client/composables/: password.ts
src/client/layouts/: DefaultLayout.vue
src/client/models/: auth.ts  transactions.ts
src/client/plugins/: axios.ts  pinia.ts
src/client/router/: index.ts
src/client/services/: auth.service.ts  transactions.services.ts
src/client/stores/: auth.ts  transactions.ts
src/client/types/: components.d.ts  pinia.d.ts  st.ts
src/client/utils/: validation.ts
src/client/views/: ChartsView.vue  DetailView.vue  HomeView.vue  LoginView.vue  RegistrationView.vue  StatisticsView.vue
src/components/: QrScanner.vue
src/server/: settings.py  urls.py  wsgi.py
src/server/apps/api/: urls.py
src/server/apps/auth/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
src/server/apps/auth/migrations/: 0001_initial.py
src/server/apps/transactions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/server/apps/transactions/migrations/: 0001_initial.py  0002_rename_add_amount_paymentreceipt_addamount_and_more.py  0003_paymentreceipt_date.py  (+1 more)
src/types/: st.ts
src/utils/: st.ts
src/views/: HomeView.vue
